--- a/LatticeOptics/latticeOpticsv5/LatticeOpticsV5.tex
+++ b/LatticeOptics/latticeOpticsv5/LatticeOpticsV5.tex
@@ -1,4 +1,3 @@
-
 \documentclass[twocolumn,aps,pra,showpacs,preprintnumbers,bibnotes]{revtex4-1}
 
 \usepackage[T1]{fontenc}
@@ -9,17 +8,6 @@
 \usepackage{color}
 \usepackage{amsmath}
 
-%% Keep track of changes
-%\usepackage[final]{changes}
-\usepackage[draft]{changes}
-\definechangesauthor[color=green]{AM}
-\definechangesauthor[color=blue]{SB}
-
-\DeclareMathOperator{\re}{Re}
-\DeclareMathOperator{\im}{Im}
-
-\newcommand\avg[1]{\left\langle#1\right\rangle}
-
 \newcommand\unit[2]{\ensuremath{#1~\mathrm{{#2}}}}
 
 \newcommand\Ket[1]{\ensuremath{|{#1}\rangle}}
@@ -27,31 +15,33 @@
 
 \newcommand\Isotope[2]{\ensuremath{^{#1}\mathrm{#2}}}
 \newcommand\Li{\Isotope{6}{Li}}
-\newcommand\K{\Isotope{40}{K}}
-\newcommand\Rb{\Isotope{87}{Rb}}
-\newcommand\Sr{\Isotope{87}{Sr}}
-\newcommand\Yb{\Isotope{171}{Yb}}
-\newcommand\Er{\Isotope{167}{Er}}
-\newcommand\Dy{\Isotope{161}{Dy}}
 
 \renewcommand{\vec}[1]{\ensuremath{\bm{#1}}}
 
 \newcommand\NA{\ensuremath{\mathrm{NA}}}
-\newcommand{\osim}{\ensuremath{\mathord{\sim}}}
-\newcommand{\Erecl}{\ensuremath{E_\mathrm{rec}}}
-\newcommand{\Ereca}{\ensuremath{E_\mathrm{rec}^\mathrm{(a)}}}
 \newcommand\FIXME{{\color{red}\ensuremath{\mathrm{FIXME}}}}
 
-\newcommand\TrapFreq{\ensuremath{\nu_t}}
-\newcommand\RecoilEnergy{\ensuremath{E_\mathrm{rec}}}
 
-\graphicspath{{./figures/}}
 \begin{document}
 
 \title{Implementation of a stable, high-power optical lattice for quantum gas microscopy}
 
-
-\author{A. Mazurenko, S. Blatt, F. Huber, M. F. Parsons, C. S. Chiu, G. Ji, D. Greif}
+\author{A. Mazurenko}
+\altaffiliation{
+  Present address: FIXME}
+\author{S. Blatt}
+\altaffiliation{
+  Present address: Max-Planck-Institut f{\"u}r Quantenoptik,
+  Hans-Kopfermann-Stra{\ss}e 1, 85748 Garching, Germany}
+\author{F. Huber}
+\altaffiliation{
+  Present address: IPG Photonics Corporation, Oxford, MA 01540}
+\author{M. F. Parsons}
+\altaffiliation{
+  Present address: FIXME TOO}
+\author{C. S. Chiu}
+\author{G. Ji}
+\author{D. Greif}
 \author{M. Greiner}
 \affiliation{
   Department of Physics, Harvard University,
@@ -59,104 +49,104 @@
 
 \date{\today}
 \begin{abstract}
- We describe the design of a stable high power 1064~nm laser system for practical use in optical lattice experiments. The system is based on a low noise laser amplified by an array of four heavily modified, high-power fiber amplifiers. The beam intensity is stabilized with a nonlinear feedback loop. The position of the produced optical lattice is monitored in real time and its stability is characterized.
+ We describe the design of a stable high power \unit{1064}{nm} laser system for practical use in optical lattice experiments. The system is based on a low noise laser amplified by an array of four heavily modified, high-power fiber amplifiers. The beam intensity is stabilized with a nonlinear feedback loop. The position of the produced optical lattice is monitored in real time and its stability is characterized.
 \end{abstract}
 \maketitle
 
 Optical lattices holding an array of ultracold atoms have become a powerful experimental platform for a wide variety of investigations into various forms of quantum simulation~\cite{Friedenauer2008, Kim2010, Struck2011, Simon2011, Yan2013, Drewes2016, Murmann2015}.
-The recent advent of quantum gas microscopy~\cite{Bakr2009, Sherson2010, Haller2015, Cheuk2015, Parsons2015, Edge2015, Omran2015, Greif2016, Cheuk2016, Parsons2016, Boll2016, Cheuk2016a, Brown2016} has enabled studies that exhibit unprecedented control over individual atoms at extremely low energy scales, particularly those governed by the Hubbard Hamiltonian ~\cite{Hubbard1963}.
+The recent advent of quantum gas microscopy~\cite{Bakr2009, Sherson2010, Haller2015, Cheuk2015, Parsons2015, Edge2015, Omran2015, Greif2016, Cheuk2016, Parsons2016, Boll2016, Cheuk2016a, Brown2016} has enabled studies that exhibit unprecedented control over individual atoms at extremely low energy scales, particularly those governed by the Hubbard Hamiltonian~\cite{Hubbard1963}.
 However, this progress has placed ever more stringent technical constraints on the lasers used to trap and manipulate the atomic systems.
 For example, heating due to the intensity noise cannot be allowed to approach the longest thermalization timescales, lest the system fail to thermalize~\cite{Savard1997}.
 Even if the system thermalizes, heating rates can limit the interrogation time available to probe a low-temperature state.
 Similarly, experiments that rely on a small number of atoms held by multiple traps place stringent requirements on the relative positional stability of the traps, to ensure that the operations performed by the traps have adequate fidelity.
 
-In this work we discuss a high power optical lattice system that exhibits levels of intensity noise below $-120\,$dBc/Hz between $1\,$kHz and $3\,$MHz Fourier frequency.
-The stability of the lattice position is below the single site level and the stability of the harmonic confinement is at the few site level.
+In this work we discuss major improvements to our high power optical lattice system~\cite{Blatt2015} and show levels of intensity noise below \unit{-120}{dBc/Hz} between \unit{1}{kHz} and \unit{3}{MHz} Fourier frequency.
+The stability of the lattice position is below the single site level (over a few hours) and the stability of the harmonic confinement is at the few site level (over nine months).
 
 \begin{figure}[t]
   \begin{center}
-    \includegraphics[width=0.85\columnwidth]{fig/figure1/figure1.pdf}
+    \includegraphics[width=0.85\columnwidth]{Figure1.pdf}
     \caption{\textbf{High level overview} showing the major components of the lattice laser feedback system.}\label{fig:high_level}
   \end{center}
 \end{figure}
 
-The coarse architecture of the system is shown in Fig.~\ref{fig:high_level} and is based on a single low-power, low-noise seed laser that supplies light to an array of four high-power fiber amplifiers (one for a transport beam~\cite{Huber2014}, and one each for the $X,Y,Z$ lattices~\cite{Parsons2016}).
+The architecture of the system is shown in Fig.~\ref{fig:high_level} and is based on a single low-power, low-noise seed laser that supplies light to an array of four high-power fiber amplifiers (one for a transport beam~\cite{Huber2014}, and one each for the $X,Y,Z$ lattices~\cite{Blatt2015,Parsons2016}).
 These amplifiers generate enough light to perform site resolved imaging~\cite{Parsons2015}, but also substantially increase the level of intensity and pointing noise.
-The fiber amplifier output is controlled by two feedback loops, which stabilize the light in low power and high power regimes, discussed later.
-After intensity stabilization, the laser is mode-shaped to a desired waist.
+The fiber amplifier output is controlled by two feedback loops, which stabilize the light in low power and high power regimes, respectively, as discussed later.
+After intensity stabilization, the laser beam is mode-shaped to a desired waist.
 The optical system is engineered to be passively stable in terms of pointing, but the position and phase of the optical lattice are monitored in real time, and beam pointing can be controlled with remotely actuated mirrors.
 
-In the following we give an in-depth technical description of the optical lattice setup we developed. We start with the laser system itself which includes the seed laser, amplification and optical setup for controlling the laser beam. In the next section we provide a detailed description of the two-stage laser power feedback system. In the last two sections we conduct a performance analysis of the short- and long-term stability of the optical lattice.
+In the following we give an in-depth technical description of the optical lattice setup we developed. We start with the laser system itself which includes the seed laser, amplification and optical setup for controlling the laser beams. In the next section we provide a detailed description of the two-stage laser power feedback system. In the last two sections we conduct a performance analysis of the short- and long-term stability of the optical lattices produced by this system.
 
 \section{Laser system}
 \subsection{Seed laser system}
-The lattice laser system is seeded by an Innolight Mephisto laser, which provides approximately $2\,$W of $1064\,$nm light.
+The lattice laser system is seeded by an Innolight Mephisto laser, which provides approximately \unit{2}{W} of \unit{1064}{nm} light.
 This commercial laser utilizes a non-planar ring oscillator (NPRO) design that ensures superb phase and intensity stability.
-This source is split into four fibers (Thorlabs PM980-XP), each connected to a fiber amplifier.
-Three of these fiber amplifiers are used to produce the 3D optical lattice~\cite{Parsons2016}, and a fourth is used for transport~\cite{Huber2014}.
-To avoid interference of the lattice beams, two of the beam paths pass through acousto-optic modulators (AOM), which detune the lattice frequencies from each other.
+This source is split and coupled into four single-mode, polarization-maintaining fibers (Thorlabs PM980-XP), each connected to the input of a fiber amplifier.
+Three of these fiber amplifiers are used to produce the 3D optical lattice~\cite{Blatt2015,Parsons2016}, and a fourth is used for transport~\cite{Huber2014}.
+To avoid interference of the lattice beams, two of the beam paths pass through acousto-optic modulators (AOMs), which detune the lattice frequencies from each other.
 
 \begin{figure*}
   \begin{center}
-    \includegraphics{fig/fig3_combined.pdf}
-    \caption{\textbf{Laser noise of the lattice system.} (a) Shows the laser noise of unmodified Nufern fiber amplifiers and the Mephisto seed, as well as an independent Mephisto MOPA 55W (not used for the optical lattice presented in this manuscript). (b) Shows the open (OL) and closed (CL) loop behavior of the high power feedback loop. (c) Shows open loop behavior of the low power feedback loop after making the modifications. (d) Closed loop behavior of the loop system without additional filtering, measured on the same setup as (c).}\label{fig:noises}
+    \includegraphics{Figure2.pdf}
+    \caption{\textbf{Laser noise of the lattice system.} (a) Shows the laser noise of unmodified Nufern fiber amplifiers and the Mephisto seed, as well as an independent Mephisto MOPA 55W (not used for the optical lattice presented in this manuscript). (b) Shows the open (OL) and closed (CL) loop behavior of the high power feedback loop. (c) Shows open loop behavior of the low power feedback loop after making the modifications. (d) Closed loop behavior of the loop system without additional filtering, measured on the same setup as panel (c).}\label{fig:noises}
   \end{center}
 \end{figure*}
 
 \subsection{Fiber amplifier system}
-Quantum gas microscopy of \Li{} requires single site trap frequencies of approximately $1\,$MHz~\cite{Parsons2015} in order to be in the Lamb-Dicke regime necessary for Raman sideband cooling.
+Quantum gas microscopy of \Li{} requires single site trap frequencies of approximately \unit{1}{MHz}~\cite{Parsons2015} to be in the Lamb-Dicke regime necessary for Raman sideband cooling.
 Such trap frequencies may only be attained using tightly focused, high-power beams.
-In practical terms, this requires approximately $30\,$W per lattice axis, which we attain using \textit{Nufern} Fiber amplifiers (NuAmp SUB1174-34).
+In practical terms, this requires approximately $30\,$W per lattice axis, which we attain using Nufern fiber amplifiers (NuAmp SUB1174-34).
 These amplifiers can amplify $150\,$mW of seed light to up to approximately $45\,$W. They use a length of doped fiber pumped with $808\,$nm light from fiber coupled diode sources to amplify $1064\,$nm light.
 The amplification is performed using a two stage design, where the stages are controlled and powered using separate power supplies and electronics.
 
 \begin{figure*}[t]
   \begin{center}
-    \includegraphics{fig/optical_layout_wide.pdf}
-    \caption{\textbf{Optical layout of the optical lattice system for beam shaping and modulation.}}\label{fig:optical_layout}
+    \includegraphics{Figure3.pdf}
+    \caption{\textbf{Optical layout} of the optical lattice system for beam shaping and modulation.}
+    \label{fig:optical_layout}
   \end{center}
 \end{figure*}
 
 The high optical powers supplied by the fiber amplifiers raise two engineering difficulties:
 \begin{enumerate}
-  \item The fiber amplification process is susceptible to many technical noise sources, such as acoustic coupling of the fiber to the environment and electrical design of the amplifier,
-  \item Stimulates Brillouin scattering (SBS) places a hard lower bound on the noise floor~\cite{Agrawal2013}.
+  \item The fiber amplification process itself is susceptible to many technical noise sources, such as acoustic coupling of the fiber to the environment and electrical design of the amplifier;
+  \item Stimulated Brillouin scattering (SBS) places a hard lower bound on the relative intensity noise (RIN) floor~\cite{Agrawal2013}.
 \end{enumerate}
 
 The NuAmp suffers from several technical problems.
 It is controlled via a USB interface, which complicates communications with an array of these devices.
 Worse yet, it is suspected of causing ground loops which add noise and interference to the analog systems.
 This added noise can be seen in Fig.~\ref{fig:noises}, where the fiber-amplified light exhibits many more spurs in the intensity noise spectrum than the seed laser.
-We solve this problem by replacing the USB control board with a custom-designed solution  that is compatible with our custom control system and engineered to avoid ground loops.
+We solve this problem by replacing the USB control board with a custom-designed solution  that is compatible with our laboratory control system and engineered to avoid ground loops.
 
 
-Further sources of technicl noise arise from the design of the amplifier. There are two power supplies in the fiber amplifier - a general purpose power supply (PSU) for the control electronics and the first, low-power amplification stage and a high power supply for the second, high-power stage.
-Despite the presence of a water-cooled cold-plate for the gain fiber and pump diodes, the high power PSU is air cooled by an internal fan.
-This fan is expected to increase noise at acoustic frequencies and degrade pointing stability by increasing vibrations.
-In order to reduce acoustic coupling and reduce switching power supply noise, both power supplies were removed from the fiber amplifier chassis, and the low power supply was replaced by a linear PSU (Acopian A24MT350M).
-Further, a high current line filter (MPE DS26387) was added to the high-power PSU (Lumina LDD-600-60-10-5VP/M).
+Further sources of technical noise arise from the design of the amplifier. There are two power supplies in the fiber amplifier: (1) a general purpose power supply (PSU) for the control electronics and the first, low-power amplification stage and (2) a high-power supply for the second, high-power stage.
+Despite the presence of a water-cooled cold-plate for the gain fiber and pump diodes, the high power PSU is air cooled by an internal fan with variable frequency.
+This fan adds noise at acoustic frequencies and degrades pointing stability by increasing vibrations on the output fiber tip.
+To reduce acoustic coupling and reduce switching power supply noise, both power supplies were removed from the fiber amplifier chassis, and the low-power supply was replaced by a linear PSU (Acopian A24MT350M).
+Further, a high current low-pass filter (MPE DS26387) was added to the high-power PSU (Lumina LDD-600-60-10-5VP/M).
 
 
-
-These upgrades serve to suppress many of the noise spurs measured in the relative intensity noise (RIN) of the fiber amplifier.
-This can be as seen by comparing Fig.~\ref{fig:noises} (a) and (b), particularly in the region of approximately $10$ kHz.
-The measurements in parts (a)-(d) were carried out on a single fiber amplifier, prior to and after the modifications. The initial and final noise spectra were verified to be consistent between amplifiers coming from the same manufacturing batch.
+These upgrades serve to suppress many of the noise spurs measured in the fiber amplifier RIN.
+The effects can be as seen by comparing Fig.~\ref{fig:noises} (a) and (b), particularly in the region of approximately \unit{10}{kHz} Fourier frequency.
+The measurements in panels (a)-(d) were carried out on a single fiber amplifier, prior to and following the modifications. The initial and final noise spectra were verified to be consistent between amplifiers coming from the same manufacturing batch.
 The figure is based on fiber amplifiers from a relatively new batch, which, even in its unmodified configuration does not exhibit a large switching supply spur.
-This is not the case for certain older batches, where the spur is approximately 30 dB higher than the background.
+This is not the case for certain older batches, where the spur is approximately \unit{30}{dB} above the background.
 
-The SBS noise is fundamental to the fiber amplifier architecture and cannot be entirely avoided. However, since it is a function of fiber length and optical power, it can be minimized. To this end, we use custom-ordered amplifiers with a $0.5\,$m length output fiber, compared to the few meter standard lengths.
-In addition, we set the lowest pump diode current that yields enough power to perform imaging.
-The rise of the noise floor as a function of the pump diode current can be seen in Fig.~\ref{fig:noises}(a).
+The SBS noise is fundamental to the fiber amplifier architecture and cannot be entirely avoided. However, since it is a function of fiber length and optical power, it can be minimized. To this end, we use custom-ordered amplifiers with a \unit{50}{cm} long output fiber, compared to the standard length of a few meters.
+In addition, we use the lowest pump diode current that yields enough power to perform imaging.
+The rise of the noise floor as a function of the pump diode current can be seen in Fig.~\ref{fig:noises}(a) at Fourier frequencies above \unit{100}{kHz}.
 
 The operation of the Nufern fiber amplifiers can be further optimized by finely controlling the cooling water.
 The water temperature tunes the wavelength of the light supplied by the diodes that optically pump the gain fiber.
 Optimizing the temperature is advantageous because (1) the maximum output power of the fiber amplifier is increased due to the improved efficiency of pump light conversion and (2) the lifetime of the amplifier is increased because less stray pump light needs to be absorbed when the pump light is separated from the output, reducing the thermal load.
 
 This is possible because the pump diodes are fixed directly to the water-cooling plate without additional temperature regulation.
-Adding a Peltier TEC and regulating to the optimal wavelength is possible, but technically challenging (requiring cooling power of $\approx100\,$W per each of the three pump diodes).
+Adding a thermoelectric cooler and regulating to the optimal wavelength is possible, but technically challenging (requiring cooling power of $\approx$\unit{100}{W} for each of the three pump diodes).
 We use a single, dedicated heat exchanger (TermoTek P21518970) to supply cooling water to an array of four fiber amplifiers.
-We tune the water temperature such that the average power supplied by the amplifiers supplying the $X$ and $Y$ lattices is optimized, while simultaneously keeping all reported amplifier temperatures below $\leq 30^\circ\mathrm{C}$\footnote{As recommended by a \textit{Nuferm} support engineer.}.
-Experimentally, we have found that more power can be gained by running the amplifiers at hotter temperature.
+We tune the water temperature such that the average power supplied by the amplifiers supplying the $X$ and $Y$ lattices is optimized, while simultaneously keeping all reported amplifier temperatures below \unit{30}{^\circ{}C}, as recommended by a Nufern support engineer.
+Experimentally, we have found that more power can be gained by running the amplifiers at even hotter temperatures.
 
 \subsection{Optical system}
 The free-space propagation of the fiber amplifier output presents several technical challenges and constraints:
@@ -164,53 +154,53 @@ The free-space propagation of the fiber amplifier output presents several techni
   \item The high optical power poses a significant danger to users and equipment.
   \item The high optical power is sufficient to induce substantial thermal lensing in some optics.
   \item The positional fluctuations of the waist at the atoms cannot be allowed to exceed a few microns between experimental realizations.
-\item By construction, the beam is retro-reflected, threatening the lifetime of the amplifier.
+  \item By construction, the beam is retro-reflected, threatening the lifetime of the amplifier.
   \end{enumerate}
 
-In order to address these challenges, we use a carefully engineered the optical system shown in Fig.~\ref{fig:optical_layout}.
+To address these challenges, we use a carefully engineered optical system shown in Fig.~\ref{fig:optical_layout}.
 This system collimates and polarizes the beam, controls its intensity and ensures good pointing stability.
 Due to the high laser power, fused silica glass and IBS coatings are used wherever possible.
-Since reflections pose a danger to the users and equipment, all undesired beams above $100\,$ mW are directed to water cooled beam-dumps (to prevent temperature gradients on the table) placed as far as practical from critical beam paths.
+Since reflections pose a danger to the users and equipment, all undesired beams above \unit{100}{mW} are directed to water cooled beam-dumps (to prevent temperature gradients on the table) placed as far as practical from critical beam paths.
 Weaker beams are dumped on uncooled diffusive beam catchers.
 
-The large-diameter fiber tip at the output of the fiber amplifier is mounted in a monolithic mount made from oxygen-depleted copper.
-The beam is collimated using an $f=20\,$mm fused-silica, air-spaced triplet collimator (Opto-Sigma HFTLSQ-15-20PF1).
-The polarization is set using an IBS coated thin-film plate polarizer (Precision photonics PO1056-FY), which has the added benefit of rejecting the undesired cladding modes of the fiber, which carry about $1\,$W of light.
+The large-diameter fiber tip at the output of the fiber amplifier is mounted in a monolithic mount made from copper.
+The beam is collimated using an $f=\unit{20}{mm}$ fused-silica, air-spaced triplet collimator (Opto-Sigma HFTLSQ-15-20PF1) angled with respect to and centered on the angle-cleaved fiber tip.
+The polarization is set using an IBS coated thin-film plate polarizer (Precision photonics PO1056-FY), which has the added benefit of rejecting the undesired cladding modes of the fiber, which carry about \unit{1}{W} of light.
 The fact that the lattice is retro-reflected, combined with the observation that optical isolation falls with applied optical power~\cite{Yoshida1999} means that two stages of optical isolators must be used.
-The optical isolators are based on $5$ mm diameter isolators from Thorlabs (IO-5-1064-VHP), with the default cube polarizers replaced by IBS coated thin-film plate polarizers.
-The isolators are located approximately $1\,$m away from the ultracold atoms which are susceptible to  undesired stray fields.
+The optical isolators are based on \unit{5}{mm} aperture terbium gallium garnet (TGG) isolators (Thorlabs IO-5-1064-VHP), where we replaced the default polarizers (BK7 Brewster plates) by IBS-coated fused silica plate polarizers.
+The isolators are located approximately \unit{1}{m} away from the ultracold atoms which are susceptible to stray magnetic fields.
 To overcome this problem the isolators are enclosed in mu-metal shielding.
-Actuation of the power is performed after the optical isolators, meaning that the full fiber amplifier output is continually passed through them.
-This is advantageous because there are no thermalization transients introduced during the experimental sequence.
+Actuation of the power is performed after the optical isolators, such that the full fiber amplifier output continuously passes through them, minimizing thermal transients during the experimental sequence.
 
 \section{Feedback System}
 
 After the beam has been cleaned up and isolated, it is important to consider two aspects of the desired experiment:
 \begin{enumerate}
-\item The lattice power must be continuously tunable from around $10$ $\mu$W to around $20$ W, corresponding to lattice depths in the approximate range of $10^-3$ to $2(10^3)\,E_R$.
-\item The location of the minimum Gaussian beam waist must be accurately positioned to overlap the other lattices and dipole traps present in the experiment, and must remain there for the duration of the collection process (hours to days).
+\item The lattice power must be continuously tunable from around \unit{10}{\mu{}W} to around \unit{20}{W}, corresponding to lattice depths in the approximate range of $10^-3$ to $2 \times 10^3 E_R$, where $E_R$ is the geometric recoil energy corresponding to the lattice spacing~\cite{Blatt2015}.
+\item The location of the minimum Gaussian beam waist must be accurately positioned to overlap the other lattices and dipole traps present in the experiment, and must remain aligned for the duration of the data collection process (hours to days).
 \end{enumerate}
 To satisfy the first of these requirements, a two-stage feedback system is implemented.
 Two stages are used because the experiment typically operates in one of two regimes, which we term \textit{detection} and \textit{interaction}.
-In the interaction phase of the experiment, the lattice is relatively shallow ($\approx 100\,$mW, corresponding to depths of $\approx 10 E_R$, where $E_R$ is the geometric recoil of the lattice), allowing atoms to tunnel and interact with each other.
-In this regime, fine and potentially fast control is required.
-In the detection phase, the depth of the lattice is dramatically raised ($\approx 2000 E_R$), isolating atoms in their individual wells so that Raman sideband imaging can be performed~\cite{Parsons2015}.
-In the detection regime, the control need not be fast, and the passive stability of the Mephisto laser ensures that noise is low at relevant frequency scales ($\approx 2$ MHz).
-Thus, two control loops are utilized, a fast loop that uses an acousto-optic modulator to actuate the laser power at low powers, and a slow loop which uses a Berek compensator to actuate the laser in high power mode.
+In the interaction phase of the experiment, the lattice is relatively shallow ($\approx \unit{100}{mW}$, corresponding to depths of $\approx 10 E_R$), which allows atoms to tunnel and interact with each other.
+In this regime, precise and potentially fast control is required.
+In the detection phase, the depth of the lattice is dramatically raised (to $\approx 2000 E_R$), which isolates atoms in their individual wells so that Raman sideband imaging can be performed~\cite{Parsons2015}.
+In the detection regime, the control need not be fast, and the passive stability of the Mephisto laser ensures that noise is low at relevant frequency scales ($\approx\unit{2}{MHz}$ Fourier frequency).
+Thus, two control loops are used, a fast loop based on an acousto-optic modulator that controls the laser at low powers, and a slow loop which uses a Berek compensator to control the laser at high powers.
 
-After the isolation stage, we use the sequence of optical elements shown in Fig.~\ref{fig:optical_layout}, consisting of a polarizer, half-wave plate (HWP), Berek compensator mounted on a precision galvo (Thorlabs GVS002, or Camtech 8320K, depending on beam path) half-wave plate, and polarizer.
-The Berek compensator is a $z$-cut quartz plate coated to be anti-reflecting at $1064\,$nm.
+After the isolation stage, we use the sequence of optical elements shown in Fig.~\ref{fig:optical_layout}, consisting of a polarizer, half-wave plate (HWP), Berek compensator mounted on a precision galvo (Thorlabs GVS002, or Camtech 8320K, depending on the beam path) half-wave plate, and polarizer.
+The Berek compensator is a $z$-cut quartz plate anti-reflection-coated at \unit{1064}{nm}.
 By tilting the plate about its vertical axis by a few degrees, the extraordinary axis is mixed into the propagation of the beam, leading to  tilt-dependent birefringence that can be tuned from a zero-wave plate past a half-wave plate, represented by a retardation angle $\phi$.
-Combined with the subsequent polarization optics, rotation of the Berek compensator can vary the transmitted power with perfect contrast.
-Figure~\ref{fig:berek} shows the transmitted power as a function of retrardation angle $\phi$ and fast-axis angle $\theta$ of the waveplates surrounding the compensator.
+Combined with the subsequent polarization optics, rotation of the Berek compensator can vary the transmitted power with a contrast of $\sim$1000:1.
+Figure~\ref{fig:berek} shows the transmitted power as a function of retardation angle $\phi$ and fast-axis angle $\theta$ of the waveplates surrounding the compensator.
 \begin{figure}
   \begin{center}
-    \includegraphics{fig/berek_sim.pdf}
-    \caption{\textbf{Berek compensator} transmission as a function of the Berek tilt angle $\phi$ and waveplate tilt angles.}\label{fig:berek}
+    \includegraphics{Figure4.pdf}
+    \caption{\textbf{Berek compensator} transmission as a function of the Berek compensator's tilt angle $\phi$ and waveplate rotation angles $\theta$.}
+    \label{fig:berek}
   \end{center}
 \end{figure}
 
-Full modulation contrast is achieved when $\theta=22.5^\circ$ to the rotation axis of the Berek compensator.
+Full modulation contrast is achieved when $\theta=\pi/8$ with respect to the rotation axis of the Berek compensator.
 This contrast can be reduced by varying $\theta$, to the limiting case where $\theta=0$, where the rotation of the Berek compensator does nothing, since the polarization of the light is parallel to the rotation axis of the quartz plate.
 
 \begin{figure}
@@ -336,7 +326,7 @@ This can be seen by considering two extreme cases - far below the diode drop, th
 Naturally, the voltage drop over the diode is chosen such that it is approximately half the maximum desired signal level of the photodiode ($3.3\,$V).
 Although a large improvement, the bandwidth still varies over the dynamic range of the loop, but only by approximately a factor of two, as seen in Fig.~\ref{fig:bandwidth}.
 Were it not for the linearization, the gain of the mixer would change by a factor of $10$ over a dynamic range spanning two orders of magnitude.
-Another function of the last stage is to clamp the voltage to be strictly $>0$, in order to prevent an unstable positive feedback behavior, which is done using diode clamp on the output arm~\cite{Horowitz2015}.
+Another function of the last stage is to clamp the voltage to be strictly $>0$, to prevent an unstable positive feedback behavior, which is done using diode clamp on the output arm~\cite{Horowitz2015}.
 Last of all, since the mixer is a current driven device, the last stage of the feedback loop uses TI's OPA627 op-amp which is able to supply tens of mA of current at an output impedance of $50\,\Omega$.
 
 \begin{figure}
@@ -376,7 +366,7 @@ As a result, we added a first order low pass with a $3$ dB frequency of $10$ kHz
 \subsection{Beam shaping}
 After the beam has passed through the feedback optics, it must be applied to the atoms. To that end, we use a $2f$ telescope of short focal length triplet collimator lenses to expand the beam, and then focus it with a long focal length singlet lens.
 We focus the lattice to a $70-90$\,$\mu$m waist at the position of the atoms.
-In order to verify that the waist is positioned correctly, we use a temporary mirror to redirect the beam away from the glass cell and onto a camera positioned in the plane corresponding to the position of the atoms.
+To verify that the waist is positioned correctly, we use a temporary mirror to redirect the beam away from the glass cell and onto a camera positioned in the plane corresponding to the position of the atoms.
 %The resulting beam at the atoms has an $m^2\leq1.4$.
 
 To prevent unwanted interference, the lattice beams enter the glass cell at an angle.
@@ -416,7 +406,7 @@ The remote actuators are Newport brand ``Picomotors'' (model 8302), fitted into 
 They work in a ``fire and forget'' manner, remaining passively stable when not in active use.
 
 Changing external conditions can contaminate large datasets if the prepared state sensitively depends on laser pointing.
-In order to watch for this contamination, we have implemented an independent monitoring system to verify appropriate pointing of both lattice laser beams.
+To watch for this contamination, we have implemented an independent monitoring system to verify appropriate pointing of both lattice laser beams.
 This monitoring system could potentially allow us to eliminate (via post-selection) experimental realizations when the system was in an undesired state.
 A beam-sampler (Thorlabs BSF10-C) reflects a small portion of the beam shortly before it reaches the atoms and images it onto a camera located in the plane corresponding to the atomic system, producing a Gaussian image identical to that of the optical lattice.
 Naturally, the position of the atoms is dictated by the light field of both the incoming and retro-reflected beams, while the monitoring camera only observes the position of the in-going beam.
@@ -465,7 +455,7 @@ Naturally, the transfer function of any such loop would have to be carefully eng
 \section{Long-term stability of the lattice structure}
 A benefit of site-resolved imaging is that every measurement of the atomic distribution is also a direct measurement of the underlying lattice structure.
 As discussed in the supplementary material of~\cite{Parsons2016, Greif2016}, the Fourier transform of an atomic distribution contains distinct peaks corresponding to the lattice structure, and these peaks can be used to extract the phase, relative angle, and spacing of the lattices.
-For this reason, we recorded a long-term measurement spanning almost one year in order to learn how these parameters change over time, see Fig.~\ref{fig:long_term_stability}.
+For this reason, we recorded a long-term measurement spanning almost one year to learn how these parameters change over time, see Fig.~\ref{fig:long_term_stability}.
 Several interesting features can be seen from the observed behavior.
 \begin{enumerate}
   \item During the first few months the lattice spacing appears to have slowly varied over as much as $10\%$.
@@ -480,8 +470,8 @@ Several interesting features can be seen from the observed behavior.
 \section{Conclusion}
 We have presented the design and specifications of an optical lattice system that has been successfully used for quantum gas microscopy of low temperature phases of the Hubbard model.
 In this design, key emphasis has been placed on the stability of the pointing and the intensity of the optical lattice, of particular importance to the underlying physics.
-To improve performance, the system can be upgraded in a variety of ways. For example, the \textit{Nufern} fiber amplifiers can be replaced with a lower noise model. Or the analog feedback loop can be replaced by a low-noise digital version. Additionally, active stabilization of the laser pointing could be implemented in the future.
+To improve performance, the system can be upgraded in a variety of ways. For example, the Nufern fiber amplifiers can be replaced with a lower noise model. Or the analog feedback loop can be replaced by a low-noise digital version. Additionally, active stabilization of the laser pointing could be implemented in the future.
 
-\bibliography{LatticeOpticsV4}
+\bibliography{LatticeOpticsV5}
 
 \end{document}
